configured key vault

--- a/CloudApp.API/appsettings.json
+++ b/CloudApp.API/appsettings.json
@@ -12,7 +12,7 @@
   },
 
   "SendGrid": {
-    "ApiKey": "SG.yUiGso7XQamXS8hg5ulhwg.WZUmRuvh3d0ulggv0ZaXNoyolUxVcxC-ljyp8vG5gns"
+    "ApiKey": ""
   },
 
   "AllowedHosts": "*"
