--- a/CloudApp.Application/CloudApp.Application.csproj
+++ b/CloudApp.Application/CloudApp.Application.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Identity" Version="1.14.2" />
+    <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.8.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CloudApp.Domain\CloudApp.Domain.csproj" />
   </ItemGroup>
 
