resolving redirection error

--- a/cloudApp/angular.json
+++ b/cloudApp/angular.json
@@ -80,7 +80,8 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "staticwebapp.config.json"
             ],
             "styles": [
               "src/styles.css"
