Fix: Added route rewrites to staticwebapp.config.json

--- a/cloudApp/staticwebapp.config.json
+++ b/cloudApp/staticwebapp.config.json
@@ -5,6 +5,18 @@
   },
   "routes": [
     {
+      "route": "/login",
+      "rewrite": "/index.html"
+    },
+    {
+      "route": "/register",
+      "rewrite": "/index.html"
+    },
+    {
+      "route": "/dashboard",
+      "rewrite": "/index.html"
+    },
+    {
       "route": "/auth",
       "rewrite": "/index.html"
     },
