--- a/cloudApp/package.json
+++ b/cloudApp/package.json
@@ -28,6 +28,7 @@
     "@angular/router": "^20.1.0",
     "@azure/msal-angular": "^4.0.15",
     "@azure/msal-browser": "^4.15.0",
+    "@microsoft/applicationinsights-web": "^3.3.9",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.22.2",
     "tslib": "^2.3.0",
