added queue storage

--- a/CloudApp.API/appsettings.json
+++ b/CloudApp.API/appsettings.json
@@ -7,12 +7,17 @@
     }
   },
 
+
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "",
+    "AzureQueueStorage": ""
   },
 
   "SendGrid": {
     "ApiKey": ""
+  },
+  "AzureQueue": {
+    "QueueName": "emailqueue"
   },
 
   "AllowedHosts": "*"
