--- a/CloudApp.API/appsettings.json
+++ b/CloudApp.API/appsettings.json
@@ -6,19 +6,15 @@
       "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
-
-
   "ConnectionStrings": {
-    "DefaultConnection": "",
-    "AzureQueueStorage": ""
+    "DefaultConnection": "", // From App Config or Key Vault
+    "StorageQueueConnection": "" // Overwritten by Key Vault
   },
-
   "SendGrid": {
-    "ApiKey": ""
+    "ApiKey": "" // Overwritten by Key Vault
   },
-  "AzureQueue": {
+  "AzureStorageQueue": {
     "QueueName": "emailqueue"
   },
-
   "AllowedHosts": "*"
 }
