backend active directory

--- a/CloudApp.API/appsettings.json
+++ b/CloudApp.API/appsettings.json
@@ -6,12 +6,19 @@
       "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "TenantId": "b41b72d0-4e9f-4c26-8a69-f949f367c91d",
+    "ClientId": "efe7d3e6-8fe5-4b82-b937-3b7ed8e9b2e7",
+    "Audience": "api://efe7d3e6-8fe5-4b82-b937-3b7ed8e9b2e7",
+    "CallbackPath": "/signin-oidc"
+  },
   "ConnectionStrings": {
-    "DefaultConnection": "", // From App Config or Key Vault
-    "StorageQueueConnection": "" // Overwritten by Key Vault
+    "DefaultConnection": "",
+    "StorageQueueConnection": ""
   },
   "SendGrid": {
-    "ApiKey": "" // Overwritten by Key Vault
+    "ApiKey": ""
   },
   "AzureStorageQueue": {
     "QueueName": "emailqueue"
