--- a/CloudApp.Application/CloudApp.Application.csproj
+++ b/CloudApp.Application/CloudApp.Application.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.8.0" />
     <PackageReference Include="Azure.Storage.Queues" Version="12.23.0" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.23.0" />
+    <PackageReference Include="Microsoft.Identity.Web.TokenCache" Version="3.11.0" />
   </ItemGroup>
 
   <ItemGroup>
