--- a/CloudApp.Infrastructure/CloudApp.Infrastructure.csproj
+++ b/CloudApp.Infrastructure/CloudApp.Infrastructure.csproj
@@ -23,6 +23,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.7" />
+    <PackageReference Include="Microsoft.Identity.Web" Version="3.11.0" />
     <PackageReference Include="Microsoft.Identity.Web.TokenCache" Version="3.11.0" />
     <PackageReference Include="Portable.BouncyCastle" Version="1.9.0" />
     <PackageReference Include="SendGrid" Version="9.29.3" />
