--- a/CloudApp.API/appsettings.json
+++ b/CloudApp.API/appsettings.json
@@ -18,7 +18,7 @@
     "SenderAddress": ""
   },
   "ConnectionStrings": {
-    "DefaultConnection": "",
+    "DefaultConnection": "Server=tcp:webdemoapi.database.windows.net,1433;Initial Catalog=DemoDB;Persist Security Info=False;User ID=demoadmin;Password=Test123$;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "StorageQueueConnection": ""
   },
   "SendGrid": {
