--- a/CloudApp.API/appsettings.json
+++ b/CloudApp.API/appsettings.json
@@ -8,9 +8,9 @@
   },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
-    "TenantId": "b41b72d0-4e9f-4c26-8a69-f949f367c91d",
-    "ClientId": "efe7d3e6-8fe5-4b82-b937-3b7ed8e9b2e7",
-    "Audience": "api://efe7d3e6-8fe5-4b82-b937-3b7ed8e9b2e7",
+    "TenantId": "",
+    "ClientId": "",
+    "Audience": "",
     "CallbackPath": "/signin-oidc"
   },
   "AzureEmail": {
@@ -18,7 +18,7 @@
     "SenderAddress": ""
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:webdemoapi.database.windows.net,1433;Initial Catalog=DemoDB;Persist Security Info=False;User ID=demoadmin;Password=Test123$;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "DefaultConnection": "",
     "StorageQueueConnection": ""
   },
   "SendGrid": {
