--- a/EmailProcessor/Properties/serviceDependencies.EmailQueueFunctionApp - Zip Deploy.json
+++ b/EmailProcessor/Properties/serviceDependencies.EmailQueueFunctionApp - Zip Deploy.json
@@ -10,6 +10,14 @@
       "resourceId": "/subscriptions/[parameters('subscriptionId')]/resourceGroups/[parameters('resourceGroupName')]/providers/Microsoft.Storage/storageAccounts/cloudstorageapp",
       "type": "storage.azure",
       "connectionId": "AzureWebJobsStorage"
+    },
+    "secrets2": {
+      "serviceConnectorResourceId": "/subscriptions/[parameters('subscriptionId')]/resourceGroups/[parameters('serviceConnectorResourceGroupName')]/providers/Microsoft.Web/sites/EmailQueueFunctionApp/providers/Microsoft.ServiceLinker/linkers/VaultUri_AC8211485F",
+      "secretStore": "AzureAppSettings",
+      "resourceId": "/subscriptions/[parameters('subscriptionId')]/resourceGroups/[parameters('resourceGroupName')]/providers/Microsoft.KeyVault/vaults/CloudApp-keyVault",
+      "type": "secrets.keyVault",
+      "connectionId": "VaultUri",
+      "dynamicId": null
     }
   }
 }
